<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewModel"
            type="com.example.zadaniemobv.viewModels.LoginRegisterModel" />

        <import type="android.view.View"/>
    </data>
<androidx.constraintlayout.widget.ConstraintLayout
    android:background="#FA8128"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.Registration_fragment">

    <EditText
        android:id="@+id/nickname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:background="@drawable/border_shape"
        android:hint="@string/nickname"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColor="@color/white"
        android:textColorHint="#4E342E"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/heslo_znova"
        android:layout_width="212dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:background="@drawable/border_shape"
        android:hint="@string/heslo_znova"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColor="@color/white"
        android:textColorHint="#4E342E"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heslo"
        app:layout_constraintVertical_bias="0.007"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/heslo"
        android:layout_width="213dp"
        android:layout_height="48dp"
        android:autofillHints=""
        android:background="@drawable/border_shape"
        android:hint="@string/heslo"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="#4E342E"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nickname"
        app:layout_constraintVertical_bias="0.044"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/submit_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#0000FF"
        android:text="@string/submit_info"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heslo_znova"
        app:layout_constraintVertical_bias="0.225" />

    <Button
        android:id="@+id/prihlasenie"
        android:layout_width="162dp"
        android:layout_height="48dp"
        android:text="@string/prihlasenie"
        android:backgroundTint="#0000FF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/submit_info"
        app:layout_constraintVertical_bias="0.104" />
    <View
        showText="@{viewModel.message}"
        android:id="@+id/showError"
        android:layout_width="410dp"
        android:layout_height="75dp"
        android:layout_marginBottom="64dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:indeterminate="true"
        android:visibility="@{viewModel.loading ? View.VISIBLE : View.INVISIBLE}"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heslo_znova"
        app:layout_constraintVertical_bias="0.011" />


</androidx.constraintlayout.widget.ConstraintLayout>
</layout>