<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewModel"
            type="com.example.zadaniemobv.viewModels.PubsModel" />
        <import type="android.view.View"/>
    </data>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.Show_Pub"
    android:background="#FA8128"
    >


    <TextView
        android:id="@+id/podnik"
        android:layout_width="314dp"
        android:layout_height="76dp"
        android:gravity="center"
        android:text="@string/podnik"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:visibility="@{viewModel.loading ? View.INVISIBLE : View.VISIBLE}"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.164"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.054"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/phone"
        android:layout_width="314dp"
        android:layout_height="76dp"
        android:gravity="center"
        android:text="@string/phone"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:visibility="@{viewModel.loading ? View.INVISIBLE : View.VISIBLE}"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/call_icon"
        app:layout_constraintHorizontal_bias="0.34"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/podnik"
        app:layout_constraintVertical_bias="0.082"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/call_icon"
        android:layout_width="43dp"
        android:layout_height="39dp"
        android:textColor="@color/white"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.98"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.251"
        app:srcCompat="@drawable/ic_call" />

    <TextView
        android:id="@+id/website"
        android:layout_width="314dp"
        android:layout_height="76dp"
        android:gravity="center"
        android:text="@string/website"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:visibility="@{viewModel.loading ? View.INVISIBLE : View.VISIBLE}"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/web_icon"
        app:layout_constraintHorizontal_bias="0.34"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone"
        app:layout_constraintVertical_bias="0.13"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/web_icon"
        android:layout_width="43dp"
        android:layout_height="39dp"
        android:textColor="@color/white"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.98"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/call_icon"
        app:layout_constraintVertical_bias="0.195"
        app:srcCompat="@drawable/ic_web" />

    <TextView
        android:id="@+id/opening_hours"
        android:layout_width="314dp"
        android:layout_height="76dp"
        android:gravity="center"
        android:text="@string/opening_hours"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:visibility="@{viewModel.loading ? View.INVISIBLE : View.VISIBLE}"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.164"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/website"
        app:layout_constraintVertical_bias="0.191"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/pub_users"
        android:layout_width="314dp"
        android:layout_height="76dp"
        android:gravity="center"
        android:text="@string/item_users"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:visibility="@{viewModel.loading ? View.INVISIBLE : View.VISIBLE}"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.164"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/opening_hours"
        app:layout_constraintVertical_bias="0.242"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/show_map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#0000FF"
        android:text="@string/show_map"
        android:visibility="@{viewModel.loading ? View.INVISIBLE : View.VISIBLE}"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.065"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/logout"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#0000FF"
        android:text="@string/logout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.942"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />
    <View
        showText="@{viewModel.message}"
        android:id="@+id/showError"
        android:layout_width="410dp"
        android:layout_height="75dp"
        android:layout_marginBottom="64dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="@{viewModel.loading ? View.VISIBLE : View.INVISIBLE}"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.432"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.513" />
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>