<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewModel"
            type="com.example.zadaniemobv.viewModels.NearbyPubsModel" />
        <import type="android.view.View"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.PubList_fragment"
        android:background="#FA8128"
        >

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/item_lay"
            android:visibility="@{viewModel.loading ? View.INVISIBLE : View.VISIBLE}"
            android:layout_width="383dp"
            android:layout_height="105dp"
            android:layout_margin="15dp"
            app:cardBackgroundColor="@android:color/holo_blue_light"
            app:layout_constraintBottom_toTopOf="@+id/recycler_nearby_pubs"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.333"
            tools:ignore="MissingConstraints">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="89dp"
                android:layout_margin="10dp"
                android:visibility="@{viewModel.loading ? View.INVISIBLE : View.VISIBLE}"
                android:gravity="center">
                <TextView
                    android:id="@+id/item_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:gravity="center"
                    android:text="@string/item_name"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/distance"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.51"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.14"
                    />

                <TextView
                    android:id="@+id/distance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/distance"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/item_name"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="1.0"
                    />

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/checkMeToPub"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    app:lottie_autoPlay="true"
                    app:lottie_loop= "true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:lottie_rawRes="@raw/lottie_clickme_to_check_into_pub"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_nearby_pubs"
            android:layout_width="0dp"
            android:layout_height="500dp"
            android:scrollbars="vertical"
            android:visibility="@{viewModel.loading ? View.INVISIBLE : View.VISIBLE}"
            app:layoutManager="LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/item_lay"
            app:layout_constraintVertical_bias="0.669" />

        <ImageView
            android:id="@+id/reload_pubs"
            android:layout_width="43dp"
            android:layout_height="39dp"
            android:layout_marginTop="21dp"
            android:background="@android:color/holo_blue_bright"
            android:importantForAccessibility="no"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.043"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/recycler_nearby_pubs"
            app:layout_constraintVertical_bias="0.044"
            app:srcCompat="@drawable/ic_reload_icon" />

        <Button
            android:id="@+id/logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.942"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:backgroundTint="#0000FF"
            app:layout_constraintVertical_bias="0.976" />

        <View
            android:id="@+id/showError"
            showText="@{viewModel.message}"
            android:layout_width="410dp"
            android:layout_height="75dp"
            android:layout_marginBottom="80dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottie_loadingNearbyPubs"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:visibility="@{viewModel.loading ? View.VISIBLE : View.INVISIBLE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_loop= "true"
            app:lottie_rawRes="@raw/lottie_finding_nearby_pubs"
            />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottie_foundLocation"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.153"
            app:lottie_speed="2"
            app:lottie_autoPlay="false"
            app:lottie_loop="false"
            app:lottie_rawRes="@raw/lottie_found_location" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottie_selectPub"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:visibility="invisible"
            app:lottie_speed="2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="false"
            app:lottie_loop= "false"
            app:lottie_rawRes="@raw/lottie_select_pub"
            />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottie_checkedIntoPub"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:visibility="@{viewModel.loadingCheckPub ? View.VISIBLE : View.INVISIBLE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="false"
            app:lottie_loop= "false"
            app:lottie_rawRes="@raw/lottie_check_into_pub"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>